--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -45,56 +45,52 @@
 					</h4>
 			  </div>
 			  <div class="col-md-6">
-				<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
-                    {% if show_teacher_forms %}
-                    <div class="btn-group" role="group" aria-label="Download">
-                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        Prenesi datoteko <span class="caret"></span>
-                      </button>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="{% url 'problem_attempt_file' problem.id %}">Datoteka za reševanje</a></li>
-                        <li><a href="{% url 'problem_edit_file' problem.id %}">Datoteka za urejanje</a></li>
-                      </ul>
-                    </div>
-                    {% else %}
-					<div class="btn-group" role="group" aria-label="Download">
-						<a class="btn btn-default" href="{% url 'problem_attempt_file' problem.id %}" role="button">
-							{# Translators: Button for downloading a single problem file. #}
-							{% trans "Download this problem file" %}
-						</a>
-					</div>
-                    {% endif %}
-					<div class="btn-group" role="group" aria-label="Solutions">
-	    				<a class="btn btn-default" href="{% url 'problem_solution' problem.id %}" role="button">
-	    				    {# Translators: Link to page with solutions. #}
-							{% trans "Solutions" %}
-	    				</a>
-					</div>
-                    {% if show_teacher_forms %}
-                    <div class="btn-group" role="group" aria-label="Move">
-                        <a class="btn btn-default" href="{% url 'problem_move' problem.id -1 %}" role="button" aria-label="Move Up">
-                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
-                        </a>
-                        <a class="btn btn-default" href="{% url 'problem_move' problem.id 1 %}" role="button" aria-label="Move Down">
-                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
-                        </a>
-                        <a class="btn btn-default" href="{% url 'problem_update' problem.id %}" role="button" aria-label="Update">
-                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                            {# Translators: Update problem text button. #}
-							{% trans "Update" %}
-                        </a>
-                        <!-- 
-					    <a href="{% url "courses.views.problemset_toggle_solution_visibility" ps.id %}" class="status" title="Rešitve so {{ ps.get_solution_visibility_display }}">
-					        {% if ps.solution_visibility == 'skrite' %}<span class="glyphicon glyphicon-ban-circle"></span>{% endif %}
-					        {% if ps.solution_visibility == 'pogojno' %}<span class="glyphicon glyphicon-remove-circle"></span>{% endif %}
-					        {% if ps.solution_visibility == 'vidne' %}<span class="glyphicon glyphicon-ok-circle"></span>{% endif %}
-					    </a>
-					     -->
-                    </div>
-                    {% endif %}
-  				  </div>     
+			  <span class="pull-right">
+					<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
+	                    {% if show_teacher_forms %}
+	                    <div class="btn-group" role="group" aria-label="Download">
+	                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+	                        Prenesi datoteko <span class="caret"></span>
+	                      </button>
+	                      <ul class="dropdown-menu" role="menu">
+	                        <li><a href="{% url 'problem_attempt_file' problem.id %}">Datoteka za reševanje</a></li>
+	                        <li><a href="{% url 'problem_edit_file' problem.id %}">Datoteka za urejanje</a></li>
+	                      </ul>
+	                    </div>
+	                    {% else %}
+						<div class="btn-group" role="group" aria-label="Download">
+							<a class="btn btn-default" href="{% url 'problem_attempt_file' problem.id %}" role="button">
+								{# Translators: Button for downloading a single problem file. #}
+								{% trans "Download this problem file" %}
+							</a>
+						</div>
+	                    {% endif %}
+						
+	                    {% if show_teacher_forms %}
+	                    <div class="btn-group" role="group" aria-label="Move">
+	                        <a class="btn btn-default" href="{% url 'problem_move' problem.id -1 %}" role="button" aria-label="Move Up">
+	                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+	                        </a>
+	                        <a class="btn btn-default" href="{% url 'problem_move' problem.id 1 %}" role="button" aria-label="Move Down">
+	                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+	                        </a>
+	                        <a class="btn btn-default" href="{% url 'problem_update' problem.id %}" role="button" aria-label="Update">
+	                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+	                            {# Translators: Update problem text button. #}
+								{% trans "Update" %}
+	                        </a>
+	                        </div>
+	                        <div class="btn-group" role="group" aria-label="Solutions">
+			    				<a class="btn btn-default" href="{% url 'problem_solution' problem.id %}" role="button">
+			    				    {# Translators: Link to page with solutions. #}
+									{% trans "Solutions" %}
+			    				</a>
+		                    </div>
+	                    {% endif %}
+  				  </div> 
+  				  </span>    
   				</div>
-			</div> 
+			</div>
 			
 			
 		</div>
