--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -21,7 +21,7 @@
 			        <a class="btn btn-default" href="{% url 'problem_set_create' course.pk %}" role="button" aria-label="Create">
 			            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			                 {# Translators: Button for creating new problem set. #}
-							 {% trans "Add new problem set." %}
+							 {% trans "Add new problem set" %}
 			        </a>
 			</div>
 		</div>
