--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -24,37 +24,44 @@
 		  {% if show_teacher_forms %}
 		  <div class="col-md-6">
 		  	 <span class="pull-right">
-		  	 <div class="btn-group" role="group" aria-label="Update">
-	  	 		<a class="btn btn-default" href="{% url 'problem_set_update' problem_set.pk %}" role="button" aria-label="Update">
-		            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-		                 {# Translators: Button for editing problem set. #}
-						 {% trans "Edit problem set" %}
-		        </a>
-		     </div>
-		  	 <div class="btn-group" role="group" aria-label="Move">
-                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk 1 %}" role="button" aria-label="Move Up">
-                    <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
-                </a>
-                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk -1 %}" role="button" aria-label="Move Down">
-                    <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
-                </a>
-             </div>
-             <div class="btn-group" role="group" aria-label="Toggle Visibility">
-				 <a class="btn btn-default" href="{% url 'problem_set_toggle_visible' problem_set.pk %}" role="button" aria-label="Show/Hide"
-				    title="Sklop je {% if problem_set.visible %}viden{% else %}skrit{% endif %}">
-				   <span style="align-content:flex-end" class="glyphicon glyphicon-eye-{% if problem_set.visible %}open{% else %}close{% endif %}" aria-hidden="true"></span>
-				 </a>
-			 </div>
-			 <div class="btn-group" role="group" aria-label="Toggle Solution Visibility">
-			 		<a class="btn btn-default" href="{% url 'problem_set_toggle_solution_visibility' problem_set.pk %}" role="button" aria-label="Set Solution Visibility"
-					   title="Rešitve so {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}skrite
-							  {% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}pogojno vidne
-							  {% else %}vidne{% endif %}">
-				        {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}<span class="glyphicon glyphicon-ban-circle"></span>{% endif %}
-				        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}<span class="glyphicon glyphicon-remove-circle"></span>{% endif %}
-				        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE %}<span class="glyphicon glyphicon-ok-circle"></span>{% endif %}
-				    </a>
-			 </div>
+			  	 <div class="btn-group" role="group" aria-label="Update">
+		  	 		<a class="btn btn-default" href="{% url 'problem_set_update' problem_set.pk %}" role="button" aria-label="Update">
+			            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+			                 {# Translators: Button for editing problem set. #}
+							 {% trans "Edit" %}
+			        </a>
+			     </div>
+			     <div class="btn-group" role="group" aria-label="Delete">
+		  	 		<a class="btn btn-default" href="{% url 'problem_set_delete' problem_set.pk %}" role="button" aria-label="Delete">
+			            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+			                 {# Translators: Button for deleting problem set. #}
+							 {% trans "Delete" %}
+			        </a>
+			     </div>
+			  	 <div class="btn-group" role="group" aria-label="Move">
+	                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk 1 %}" role="button" aria-label="Move Up">
+	                    <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+	                </a>
+	                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk -1 %}" role="button" aria-label="Move Down">
+	                    <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+	                </a>
+	             </div>
+	             <div class="btn-group" role="group" aria-label="Toggle Visibility">
+					 <a class="btn btn-default" href="{% url 'problem_set_toggle_visible' problem_set.pk %}" role="button" aria-label="Show/Hide"
+					    title="Sklop je {% if problem_set.visible %}viden{% else %}skrit{% endif %}">
+					   <span style="align-content:flex-end" class="glyphicon glyphicon-eye-{% if problem_set.visible %}open{% else %}close{% endif %}" aria-hidden="true"></span>
+					 </a>
+				 </div>
+				 <div class="btn-group" role="group" aria-label="Toggle Solution Visibility">
+				 		<a class="btn btn-default" href="{% url 'problem_set_toggle_solution_visibility' problem_set.pk %}" role="button" aria-label="Set Solution Visibility"
+						   title="Rešitve so {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}skrite
+								  {% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}pogojno vidne
+								  {% else %}vidne{% endif %}">
+					        {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}<span class="glyphicon glyphicon-ban-circle"></span>{% endif %}
+					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}<span class="glyphicon glyphicon-remove-circle"></span>{% endif %}
+					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE %}<span class="glyphicon glyphicon-ok-circle"></span>{% endif %}
+					    </a>
+				 </div>
 			 </span>
 		  </div>
 		  {% endif %} {% comment %}end if show_teacher_forms{% endcomment %}
