--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,4 +1,6 @@
 {% load i18n %}
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +12,8 @@
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    	
     <style type="text/css"> body { padding-top: 70px; }</style>  <!-- so fixed navigation bar will not overlay other content-->
   </head>
   <body>
@@ -54,8 +58,13 @@
       {% block body %}  {% block content %}{% endblock %}  {% endblock %}
     </div><!-- /.container -->
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    
+    <!-- for Tree view -->
+	<script src="{% static "js/bootstrap-treeview.js" %}"></script>
+	<script src="{% static "js/treeview_functions.js" %}"></script>
+    
+    
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
