add copy problem form

--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -34,42 +34,12 @@
 </div>
 </div>
 
-     {# comment Copy problem modal #}
-	<div id="modal_copy" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="copy_problem">
-		 <div class="modal-dialog" role="document">
-		 	<div class="modal-content">
-	            <div class="modal-header">
-	              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-	              {# Translators: Title of copy problem modal.#}
-				  <h3>{% trans "Copy problem" %} <span id='modal_copy_problem_title'>problem title</span></h3>
-	            </div>
-	            <div class="modal-body">
-	              {# Translators: Text of copy problem modal.#}
-	              {% trans "Please choose a problem set to copy this problem to:" %} 
-	              {# comment TODO: list of problem sets user has right to #}
-	              <div id="problem_list_tree"></div>
-	            </div>
-	            <div class="modal-footer">
-	            
-	            
-	              <button class="btn btn-danger btn-large" id="button_copy_confirm">
-	                {# Translators: Confirm copying of a problem.#}
-	                {% trans "Copy" %}
-	              </button>
-	              <script>
-	              $('#button_copy_confirm').on('click', function () {
-	            	  selectedItem = $('#problem_list_tree').treeview('getSelected');
-		              copyProblem(selectedItem, "problem_delete" );
-		          });
-	              </script>
-	              
-	              
-	              
-	              <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">{% trans "Cancel" %}</button>
-	            </div>
-            </div>
-         </div>
-     </div>
+<div class="modal fade" id="modal">
+  <div class="modal-dialog">
+    <div class="modal-content" id="modal_content">
+    </div>
+  </div>
+</div>
 
 
 
@@ -131,14 +101,20 @@
 	                            {# Translators: Update problem text button. #}
 								{% trans "Update" %}
 	                        </a>
-	                        <button id="button_copy_{{ problem.id }}" class="btn btn-default" aria-label="Copy">
+	                        <button class="btn btn-default" aria-label="Copy" id="button_copy_{{ problem.id }}">
 	                        <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
 	                        {# Translators: Copy problem text button. #}
 							{% trans "Copy" %}								
 	                        </button>	                        
 	                        <script>
 		                      $('#button_copy_{{ problem.id }}').on('click', function () {
-		                    	  openModal({{ problem.id }}, "{{ problem.title }}");
+		                    	  $("#modal_content").load(
+		                    	  	  "{% url 'problem_copy' problem.id %}",
+		                    	  	  function () {
+		                    	  	      $("#modal").modal();
+		                    	  	  }
+		                    	  );
+		                    	  
 		                      });
 		                    </script>
 	                        <a class="btn btn-default" href="{% url 'problem_delete' problem.id %}" role="button" aria-label="Delete">
