--- a/web/templates/problems/problem_confirm_delete.html
+++ b/web/templates/problems/problem_confirm_delete.html
@@ -1,30 +1,22 @@
-{% extends 'base.html' %}
 {% load i18n %}
 
-{% block title %}
-	{# Translators: Title of problem delete confirmation page. Brisanje naloge#}
-	{% trans "Delete problem" %} {{ object.title }}
-{% endblock %}
+<form action="{% url 'problem_delete' problem.id %}"  method="post" id='delete_problem_form'>
+	{% csrf_token %}
 
-{% block content %}
-	{# Translators: Text of problem delete confirmation page. Ste prepričani, da želite pobrisati nalogo#}
-	<p>{% trans "Are you sure you want to delete problem" %} <em>{{ object.title }}</em>?</p>
-	
-	<div class="row">
-	  	<div class="col-md-1">
-		  	<form action="" method="post">
-		    	{% csrf_token %}
-		    	<button type="submit" class="btn btn-primary btn-large">
-		    		{% trans "Yes" %}
-		    	</button>
-		 	 </form>
-	  	</div>
-	  	<div class="col-md-1">
-	  	  	<a class="btn btn-primary btn-large" href="{% url 'problem_set_detail' object.problem_set.pk %}" role="button">
-			  	{% trans "No" %}
-		  	</a>
-	  	</div>
-	  	<div class="col-md-10"></div>
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	    {# Translators: Title of problem delete confirmation page. Brisanje naloge#}
+	    <h4 class="modal-title">{% trans "Delete problem" %} {{ problem.title }}</h4>
 	</div>
-
-{% endblock %}
+	<div class="modal-body">
+		{# Translators: Translators: Text of problem delete confirmation page. Ste prepričani, da želite pobrisati nalogo#}
+		{% trans "Are you sure you want to delete problem" %} <em>{{ object.title }}</em>?	
+				            
+	</div>
+	<div class="modal-footer">
+		<button type="submit" class="btn btn-primary btn-large">
+    		{% trans "Yes" %}
+    	</button>
+		<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "No" %}</button>
+	</div>
+</form>	
