--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -35,3 +35,9 @@
     </div>
 		
 {% endblock content %}
+
+{% block extra_js %}
+<!-- for Tree view and modals-->
+<script src="{% static "js/bootstrap-treeview.js" %}"></script>
+<script src="{% static "js/js_functions.js" %}"></script>
+{% endblock %}
