--- a/web/templates/problems/problem_confirm_delete.html
+++ b/web/templates/problems/problem_confirm_delete.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="modal-body">
 		{# Translators: Translators: Text of problem delete confirmation page. Ste prepričani, da želite pobrisati nalogo#}
-		{% trans "Are you sure you want to delete problem" %} <em>{{ object.title }}</em>?	
+		{% trans "Are you sure you want to delete problem" %} <em>{{ problem.title }}</em>?	
 				            
 	</div>
 	<div class="modal-footer">
