--- a/web/templates/courses/problemset_confirm_delete.html
+++ b/web/templates/courses/problemset_confirm_delete.html
@@ -1,30 +1,22 @@
-{% extends 'base.html' %}
 {% load i18n %}
 
-{% block title %}
-	{# Translators: Title of problem delete confirmation page. Brisanje sklopa#}
-	{% trans "Delete problem set" %} {{ object.title }}
-{% endblock %}
+<form action="{% url 'problem_set_delete' problemset.id %}"  method="post" id='delete_problem_set_form'>
+	{% csrf_token %}
 
-{% block content %}
-	{# Translators: Text of problem set delete confirmation page. Ste prepričani, da želite pobrisati sklop#}
-	<p>{% trans "Are you sure you want to delete problem set" %} <em>{{ object.title }}</em>?</p>
-	
-	<div class="row">
-	  	<div class="col-md-1">
-		  	<form action="" method="post">
-		    	{% csrf_token %}
-		    	<button type="submit" class="btn btn-primary btn-large">
-		    		{% trans "Yes" %}
-		    	</button>
-		 	 </form>
-	  	</div>
-	  	<div class="col-md-1">
-	  	  	<a class="btn btn-primary btn-large" href="{% url 'course_detail' object.course.pk %}" role="button">
-			  	{% trans "No" %}
-		  	</a>
-	  	</div>
-	  	<div class="col-md-10"></div>
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	    {# Translators: Title of problem delete confirmation page. Brisanje sklopa#}
+	    <h4 class="modal-title">{% trans "Delete problem set" %} {{ problemset.title }}</h4>
 	</div>
-
-{% endblock %}
+	<div class="modal-body">
+		{# Translators: Translators: Text of problem set delete confirmation page. Ste prepričani, da želite pobrisati sklop#}
+		{% trans "Are you sure you want to delete problem set" %} <em>{{ problemset.title }}</em>?	
+				            
+	</div>
+	<div class="modal-footer">
+		<button type="submit" class="btn btn-primary btn-large">
+    		{% trans "Yes" %}
+    	</button>
+		<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "No" %}</button>
+	</div>
+</form>	
