--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -18,11 +18,11 @@
         {% if show_teacher_forms %}
         <div class="panel-body">
 			<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
-			        <a class="btn btn-default" href="{% url 'problem_set_create' course.pk %}" role="button" aria-label="Create">
+			        <button class="btn btn-default btn-for-modal" data-url="{% url 'problem_set_create' course.pk %}" aria-label="Create">
 			            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			                 {# Translators: Button for creating new problem set. #}
 							 {% trans "Add new problem set" %}
-			        </a>
+			        </button>
 			</div>
 		</div>
 		{% endif %}
