--- a/web/templates/courses/problemset_form.html
+++ b/web/templates/courses/problemset_form.html
@@ -1,32 +1,40 @@
-{% extends 'base.html' %}
 {% load i18n %}
+{% load bootstrap3 %}
 
-{% block title %}
-  {% if form.instance.pk %}
-  	{# Translators: Title of editing form for problems sets. #}
-    {% trans "Edit problem set" %} <em>{{ form.instance.title }}</em>
-  {% else %}
-  	{# Translators: Title of 'add new problem' form. #}
-    {% trans "Add new problem set" %} <em>{{ course.title }}</em>
-  {% endif %}
-{% endblock %}
-
-{% block content %}
-  <form action="" method="post">
-	 {{ form.as_p }}
+{% if form.instance.pk %}
+	<form action="{% url 'problem_set_update' problemset.id %}"  method="post" id='edit_problem_set_form'>
+{% else %}
+	<form action="{% url 'problem_set_create' course.id %}"  method="post" id='add_problem_set_form'>
+{% endif %}
+	{% csrf_token %}
+    	<input type="hidden" name="problem_set" id="id_problem_set" value="{{ form.instance.problem_set.id }}" />
+    	<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		    <h4 class="modal-title">
+		    	{% if form.instance.pk %}
+		  			{# Translators: Title of editing form for problems sets. #}
+		    		{% trans "Edit problem set" %} <em>{{ form.instance.title }}</em>
+	  			{% else %}
+	  				{# Translators: Title of 'add new problem set' form. #}
+	    			{% trans "Add new problem set" %}
+	  			{% endif %}
+		    </h4>
+		</div>		
+		<div class="modal-body">
+			{% bootstrap_form form %}
+		</div>
+		<div class="modal-footer">
+	    <button type="submit" class="btn btn-primary">
+		{% if form.instance.pk %}
+	    	{# Translators: edit problem form button. #}
+	    	{% trans "Edit" %}
+	    {% else %}
+	    	{# Translators: add new problem form button. #}
+	    	{% trans "Add" %}
+		{% endif %}
+	   	</button>
+		<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}</button>
+	</div>
+</form>
 	 
-	 {% csrf_token %}
-	{% if form.instance.pk %}
-    <button type="submit" class="btn btn-primary">
-    	{# Translators: edit problem form button. #}
-    	{% trans "Edit" %}
-    </button>
-    {% else %}
-    <button type="submit" class="btn btn-primary">
-    	{# Translators: add new problem form button. #}
-    	{% trans "Add" %}
-   	</button>
-  {% endif %}
-  </form>
-  
-{% endblock %}
+	
